# market-sentiment-oracle

./: .coverage  .coveragerc  .env example  .gitignore  CHANGELOG.md  DATA_DICTIONARY.md  Dockerfile  Dockerfile.processor  INFRASTRUCTURE.md  README.md  TESTING.md  dashboard-deployment.yaml  dashboard-service.yaml  k8s-bot.yaml  main.py  pyproject.toml  pytest.ini  requirements.txt
.jules/: bolt.md  sentinel.md
infra/k8s/: ingest-cronjob.yaml  ingest-job.yaml  merge-cronjob.yaml  process-cronjob.yaml  process-job.yaml
infra/terraform/: main.tf  provider.tf  storage.tf  variables.tf
models/: lstm_AAPL.keras  lstm_AMZN.keras  lstm_GOOGL.keras  lstm_META.keras  lstm_MSFT.keras  lstm_NVDA.keras  lstm_TSLA.keras
src/: process_sentiment.py  seed_data.py
src/backtesting/: strategy.py
src/dashboard/: app.py
src/data/: ingest.py  ingest_news.py  seed_mock_data.py
src/execution/: bot.py
src/features/: merge_data.py  technical_indicators.py
src/models/: train_lstm.py  train_svm.py
tests/: test_backtest.py  test_dashboard.py  test_data_suite.py  test_features.py  test_ingest.py  test_integration.py  test_market_data_ingest.py  test_math_suite.py  test_merge_data.py  test_models.py  test_models_main.py  test_models_suite.py  test_process_sentiment.py  test_technical_features_integration.py
