[project]
name = "market-sentiment-oracle"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "google-cloud-storage>=3.8.0",
    "numpy>=2.4.1",
    "pandas>=3.0.0",
    "pandera>=0.28.1",
    "pyarrow>=23.0.0",
    "pytest>=9.0.2",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "torch>=2.10.0",
    "torchaudio>=2.10.0",
    "torchvision>=0.25.0",
    "transformers>=5.0.0",
    "yfinance>=1.1.0",
]
