[project]
name = "market-sentiment-oracle"
version = "0.1.0"
description = "Market Sentiment Oracle - Tesis Maestría"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "alpaca-py>=0.43.2",
    "backtrader>=1.9.78.123",
    "google-cloud-storage>=3.8.0",
    "matplotlib>=3.10.0",        # Mantenemos para gráficas básicas
    "numpy>=2.0.0",
    "pandas<3",
    "pandera>=0.18.0",
    "plotly>=5.18.0",            # Mantenemos para el Dashboard
    "pyarrow>=15.0.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "scikit-learn>=1.4.0",
    "streamlit>=1.30.0",         # Mantenemos para el Dashboard
    
    # --- LA GRAN OPTIMIZACIÓN ---
    "tensorflow-cpu>=2.16.0",    # Cambio CLAVE: Versión ligera solo CPU
    "torch>=2.2.0",              # FinBERT lo necesita
    "transformers>=4.38.0",      # FinBERT lo necesita
    
    # Eliminamos: torchaudio, torchvision (No los usas en finanzas)
    # Eliminamos: pytest (Ya está abajo en dev)
    
    "urllib3<2.0.0",             # Restricción necesaria por conflictos
    "yfinance>=0.2.36",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "black",                     # Formateador (Opcional)
    "ruff"                       # Linter (Opcional)
]
